// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkmark renders colors correctly 1`] = `
<svg
  className=""
  height={40}
  onClick={undefined}
  viewBox="0 0 40 40"
  width={40}
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <defs>
    <circle
      cx={20}
      cy={20}
      id="a"
      r={20}
    />
    <mask
      fill="#fff"
      height={40}
      id="b"
      width={40}
      x="0"
      y="0"
    >
      <use
        xlinkHref="#a"
      />
    </mask>
  </defs>
  <g
    fill="#fd3659"
    fillRule="evenodd"
  >
    <use
      mask="url(#b)"
      stroke="#fd3659"
      strokeWidth="4"
      xlinkHref="#a"
    />
    <path
      d="M17.854 26.96l12.57-12.57-1.414-1.415-11.156 11.157-6.157-6.157-1.415 1.414z"
      fill="#fff"
    />
  </g>
</svg>
`;

exports[`Checkmark renders correctly 1`] = `
<svg
  className=""
  height={40}
  onClick={undefined}
  viewBox="0 0 40 40"
  width={40}
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <defs>
    <circle
      cx={20}
      cy={20}
      id="a"
      r={20}
    />
    <mask
      fill="#fff"
      height={40}
      id="b"
      width={40}
      x="0"
      y="0"
    >
      <use
        xlinkHref="#a"
      />
    </mask>
  </defs>
  <g
    fill="#333"
    fillRule="evenodd"
  >
    <use
      mask="url(#b)"
      stroke="#333"
      strokeWidth="4"
      xlinkHref="#a"
    />
    <path
      d="M17.854 26.96l12.57-12.57-1.414-1.415-11.156 11.157-6.157-6.157-1.415 1.414z"
      fill="#fff"
    />
  </g>
</svg>
`;
